--- a/style.css
+++ b/style.css
@@ -362,96 +362,6 @@ h6 .center-block {
     }
 }
 
-.slider-warp {
-    width: 500px;
-    height: 281px;
-    position: relative;
-    overflow: hidden;
-}
-
-.slider-warp ul {
-    padding: 0px;
-    margin: 0px;
-    position: absolute;
-}
-
-.slider-warp li {
-    list-style: none;
-}
-
-.slider-warp li img {
-    display: block;
-    width: 100%;
-    margin: 0px;
-    padding: 0px;
-}
-
-.xslider-nav {
-    position: absolute;
-    z-index: 2;
-    bottom: 2px;
-    text-align: center;
-    width: 100%;
-    margin: 5px 0px;
-}
-
-.xslider-nav span {
-    display: inline-block;
-    width: 0px;
-    height: 0px;
-    margin: 0 4px;
-    padding: 3px;
-    background: transparent;
-    border-radius: 5px;
-    border: 2px solid white;
-    cursor: pointer;
-    opacity: 0.7;
-}
-
-.xslider-nav span.active {
-    background: white;
-}
-
-.xslider-arrow {
-    top: 50%;
-    position: absolute;
-    width: 100%;
-}
-
-.xslider-arrow span {
-    display: block;
-    width: 32px;
-    height: 32px;
-    right: 15px;
-    position: absolute;
-    margin-top: -16px;
-    overflow: hidden;
-    background: rgba(0, 0, 0, .2) no-repeat 50% 50%;
-    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAQCAQAAABuQZ3IAAAAi0lEQVR4AU3OISBEQQBAwS0AACS9NxqQgCZpkiYBVddFvWhAAUABAPQCAGC4g/0vTnrBqCfDIZl70J+kMUBPpEwT4FNXxBxz4F1HxHyr4EVTxBLb4EFNxEon4CJSlVNw9AcV9sC16h8osgke1P1ArgXwouVvdQq86ww/GQefusNf7kBviBlxpT8k+gL/Wox4r1d4MwAAAABJRU5ErkJggg==');
-    background-size: 7px 11px;
-    border-radius: 32px;
-    text-indent: -999em;
-    opacity: .6;
-    transition: opacity .2s;
-    cursor: pointer;
-}
-
-.xslider-arrow .prev {
-    left: 15px;
-    transform: rotate(-180deg);
-}
-
-.xslider-nav p {
-    display: block;
-    border: 1px solid white;
-    width: 60px;
-    right: 0px;
-    position: absolute;
-    margin: 5px;
-    padding: 2px;
-    bottom: 0px;
-    color: white;
-}
 
 #content {
     box-shadow: 0 1px 3px -1px rgba(0, 0, 0, .15);
@@ -1028,7 +938,7 @@ cite {
     }
 }
 
-#sign-it h2.section-title {
+#ContactUs h2.section-title {
     margin-bottom: 9.8rem
 }
 
@@ -1069,7 +979,7 @@ cite {
     font-weight: 700
 }
 
-#sign-list {
+#ContactUs {
     list-style: none;
     margin: 0;
     padding: 0
@@ -1102,7 +1012,7 @@ cite {
     background: rgba(255, 255, 255, .15)
 }
 
-#sign-it .btn {
+#ContactUs .btn {
     box-shadow: none;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
@@ -1173,7 +1083,7 @@ cite {
         font-family: roboto, sans-serif;
         font-weight: 700
     }
-    #sign-it h2.section-title {
+    #ContactUs h2.section-title {
         margin-bottom: 0
     }
 }
@@ -1358,162 +1268,3 @@ body:not(.one-page) #content {
     position: relative
 }
 
-// Slider CSS
-
-.slider-wraper {
-    width: 100vw;
-    height: 100vh;
-  }
-  
-  .slider--item {
-    width: 100vw;
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
-  .slick-slide {
-    position: relative;
-    outline: none;
-    z-index: 1;
-  }
-  .slick-slide.slick-current {
-    z-index: 2;
-  }
-  
-  .slick-arrow {
-    position: absolute;
-    width: 150px;
-    top: 0;
-    height: 100%;
-    border: none;
-    outline: none;
-    background-color: rgba(255, 255, 255, 0);
-    text-indent: -9999px;
-    z-index: 999;
-    cursor: pointer;
-  }
-  .slick-arrow:before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 42px;
-    height: 42px;
-    top: 50%;
-    margin-top: -21px;
-    -webkit-transition: all, 0.3s, cubic-bezier(0.55, 0, 0.1, 1) 1s ease-in-out;
-    -khtml-transition: all, 0.3s, cubic-bezier(0.55, 0, 0.1, 1) 1s ease-in-out;
-    -moz-transition: all, 0.3s, cubic-bezier(0.55, 0, 0.1, 1) 1s ease-in-out;
-    -ms-transition: all, 0.3s, cubic-bezier(0.55, 0, 0.1, 1) 1s ease-in-out;
-    -o-transition: all, 0.3s, cubic-bezier(0.55, 0, 0.1, 1) 1s ease-in-out;
-    transition: all, 0.3s, cubic-bezier(0.55, 0, 0.1, 1) 1s ease-in-out;
-  }
-  .slick-arrow:after {
-    content: "";
-    position: absolute;
-    display: block;
-    height: 2px;
-    width: 160px;
-    top: 50%;
-    background-color: white;
-    -webkit-transition: all, 0.4s 0.1s, cubic-bezier(0.55, 0, 0.1, 1) 1s ease-in-out;
-    -khtml-transition: all, 0.4s 0.1s, cubic-bezier(0.55, 0, 0.1, 1) 1s ease-in-out;
-    -moz-transition: all, 0.4s 0.1s, cubic-bezier(0.55, 0, 0.1, 1) 1s ease-in-out;
-    -ms-transition: all, 0.4s 0.1s, cubic-bezier(0.55, 0, 0.1, 1) 1s ease-in-out;
-    -o-transition: all, 0.4s 0.1s, cubic-bezier(0.55, 0, 0.1, 1) 1s ease-in-out;
-    transition: all, 0.4s 0.1s, cubic-bezier(0.55, 0, 0.1, 1) 1s ease-in-out;
-    opacity: 0;
-  }
-  .slick-arrow.slick-prev {
-    left: 0;
-  }
-  .slick-arrow.slick-prev:before {
-    border-top: 2px solid white;
-    border-left: 2px solid white;
-    left: 50px;
-    -webkit-transform: rotate(-45deg);
-    -khtml-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-  }
-  .slick-arrow.slick-prev:after {
-    left: 300px;
-  }
-  .slick-arrow.slick-prev:hover:before {
-    left: 120px;
-  }
-  .slick-arrow.slick-prev:hover:after {
-    left: 113px;
-    opacity: 1;
-    width: 80px;
-  }
-  .slick-arrow.slick-next {
-    right: 0;
-  }
-  .slick-arrow.slick-next:before {
-    border-bottom: 2px solid white;
-    border-right: 2px solid white;
-    right: 50px;
-    -webkit-transform: rotate(-45deg);
-    -khtml-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-  }
-  .slick-arrow.slick-next:after {
-    right: 300px;
-  }
-  .slick-arrow.slick-next:hover:before {
-    right: 120px;
-  }
-  .slick-arrow.slick-next:hover:after {
-    right: 113px;
-    opacity: 1;
-    width: 80px;
-  }
-  
-  .slick-dots {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    position: absolute;
-    bottom: 30px;
-    text-align: center;
-  }
-  .slick-dots li {
-    display: inline-block;
-    vertical-align: middle;
-    margin: 0 6px;
-  }
-  .slick-dots li.slick-active button {
-    background-color: white;
-    height: 14px;
-    width: 14px;
-  }
-  .slick-dots li.slick-active button:hover {
-    background-color: white;
-  }
-  .slick-dots li button {
-    outline: none;
-    display: block;
-    width: 18px;
-    height: 18px;
-    border: 1px solid white;
-    background-color: rgba(255, 255, 255, 0);
-    text-indent: -9999px;
-    border-radius: 100%;
-    cursor: pointer;
-    -webkit-transition: all, 0.2s, ease-in 1s ease-in-out;
-    -khtml-transition: all, 0.2s, ease-in 1s ease-in-out;
-    -moz-transition: all, 0.2s, ease-in 1s ease-in-out;
-    -ms-transition: all, 0.2s, ease-in 1s ease-in-out;
-    -o-transition: all, 0.2s, ease-in 1s ease-in-out;
-    transition: all, 0.2s, ease-in 1s ease-in-out;
-  }
-  .slick-dots li button:hover {
-    background-color: rgba(255, 255, 255, 0.5);
-  }
-  
